devops/k8s-local/03-api-products.yml
apiVersion: v1
kind: Service
metadata:
  name: service-api-products
  labels:
    app: service-api-products
    service: service-api-products
spec:
  ports:
  - port: 8090
    name: http
  selector:
    app: service-api-products
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-api-products
  labels:
    app: service-api-products
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-api-products
  template:
    metadata:
      labels:
        app: service-api-products
    spec:
      containers:
      - name: api-products
        image: dimo1992/research:api-product-02
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8090
